# humanoid_unitree_h1_2

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml
config/: h1_2.yaml
resources/xml/: h1_2.xml  scene.xml
scripts/: download_models_h1_2.sh  run_control_h1_2.sh  run_driver_h1_2.sh  run_hmi_h1_2.sh  run_sim2sim_h1_2.sh
