<?xml version="1.0"?>
<package format="3">
  <name>humanoid_unitree_h1_2</name>
  <maintainer email="robot_team@spacemit.com">robot_team</maintainer>
  <version>0.1.0</version>
  <description>Humanoid Unitree H1_2 robot application: config, resources, and policy models</description>
  <depend>humanoid_common</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
